--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -22,9 +22,9 @@ POL_mathematics_schools:0 "수학 대학"
 POL_mathematics_schools_desc:0 "이과 계열 학교들에 대한 자금 지원은 우리의 연구 개발 분야에서 큰 혜택을 줄 것입니다."
 POL_winged_hussars_idea:0 "윙드 후사르의 후예"
 POL_winged_hussars_idea_desc:0 "윙드 후사르들의 정신은 여전히 현대 폴란드군 안에 살아 숨쉬고 있습니다."
-POL_offensive_force_idea:0 "An Offensive Force"
+POL_offensive_force_idea:0 "공격적 부대"
 POL_offensive_force_idea_desc:0 "Poland finds herself surrounded on all sides by nations that have no love for her. But it is not enough to merely sit back and watch as our enemies plan around us. It is we who must make the first strike, and destroy our enemies before they can destroy us."
-POL_defensive_tactics_idea:0 "Defensive Tactics"
+POL_defensive_tactics_idea:0 "방어적 전략"
 POL_defensive_tactics_idea_desc:0 "Poland finds herself surrounded on all sides by nations that have no love for her. If we are to survive, we must make it so that the enemy pays for every inch of ground they take with blood, and that our armies stand ready to defend every inch of Polish soil."
 POL_assembly_lines_idea:0 "Contemporary Assembly Lines"
 POL_assembly_lines_idea_desc:0 "Assembly lines increase our factory efficiency."
@@ -38,7 +38,7 @@ POL_centralized_state_idea:0 "A Centralised State"
 POL_centralized_state_idea_desc:0 "The nobles have been undercut at every turn, hurting their ability to influence the government."
 POL_a_new_sejm_idea:0 "새로운 폴란드 세임"
 POL_a_new_sejm_idea_desc:0 "개혁된 세임(Sejm)은 새로운 위협에 더 유연히 대처하고 합리적인 결정을 내릴 수 있습니다."
-POL_trade_reform_idea:0 "International Trade Reform"
+POL_trade_reform_idea:0 "국제교역 개혁"
 POL_trade_reform_idea_desc:0 "Reforming our trade policy will keep us competitive in foreign markets."
 POL_poland_forever_idea:0 "폴란드여 영원하라"
 POL_poland_forever_idea_desc:0 "설령 폴란드가 사라지는 일이 있더라도 폴란드인들은 절대 굴복하지 않을 것입니다."
@@ -142,8 +142,8 @@ POL_territorial_claims:0 "독일 영토 주장"
 POL_kickstart_navy:0 "새로운 해군에 시동을 걸다"
 POL_austrian_claims:0 "오스트리아 영토 주장"
 POL_minstry_of_public_security:0 "공공보안부"
-POL_international_agents:0 "International Polish Agents"
-POL_spread_the_revolution:0 "Spreading the Revolution"
+POL_international_agents:0 "국제적 폴란드기관"
+POL_spread_the_revolution:0 "혁명의 전파"
 POL_redistribute_wealth:0 "Redistribute the Wealth"
 POL_centralize_infrastructure:0 "The New Central Industrial Region"
 POL_farmers_reform:0 "The State Road Fund"
@@ -155,15 +155,15 @@ POL_the_munitions_district:0 "Munitions Districts"
 POL_more_munitions:0 "Stalowa Wola"
 POL_modernization_munitions:0 "Contemporary Assembly Lines"
 POL_research_slot:0 "Private Research Initiatives"
-POL_more_factories:0 "Industrial Expansion"
+POL_more_factories:0 "산업확 장"
 POL_factories:0 "Modernise Congress Poland"
-POL_border_forts:0 "Establish Border Forts"
-POL_defensive_tactics:0 "Defensive Tactics"
+POL_border_forts:0 "국경선 요새 구축"
+POL_defensive_tactics:0 "방어적 전략"
 POL_army_reform:0 "The Next War's Army"
-POL_new_airforce:0 "A New Air Force"
-POL_import_rifles:0 "Import Foreign Rifles"
-POL_a_new_rifle:0 "The New Polish Rifle"
-POL_military_ideals:0 "An Offensive Fighting Force"
+POL_new_airforce:0 "새로운 공군"
+POL_import_rifles:0 "외래소총 수입"
+POL_a_new_rifle:0 "새로운 폴란드의 소총"
+POL_military_ideals:0 "공격적 전투기 부대"
 POL_modern_military_thought:0 "Modern Military Thought"
 POL_military_desgin_bureaus:0 "Polish Military Design Bureau"
 POL_modern_cavalry:0 "현대 기병"
