--- a/Kaiserreich Korean Translation/localisation/KR_Japan_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_Domestic_l_english.yml
@@ -131,17 +131,17 @@ JAP_part_two_land_reform:0 "지속적 토지개혁 실시"
 JAP_land_reform:0 "토지개혁"
 JAP_land_reform_desc:0 "토지개혁은 일본 정계에서 근 70년동안 계속되어온 문제입니다. 우리 이전에도 이 문제를 해결하려 시도한 많은 이들이 있었고, 우리가 해결하지 못한다면 우리 뒷세대 역시 같은 문제를 겪을 것입니다. 시간과 노력을 많이 투입할수록 노력의 결실이 맺힐 가능성은 높아질 것이나, 언제 계획의 종료를 선언할지는 우리 마음대로 입니다..."
 land_reform_1:0 "기초적 토지개혁"
-land_reform_1_desc:0 "The Land Reform Act is designed to limit landlordism and provide farmland for poor farmers. Our initial plans will enforce redistribution of all land owned by absentee landlords within the next four years."
+land_reform_1_desc:0 "토직개혁법은 기존 지주제도를 제한하고, 빈농에게 농지를 제공하기 위하여 설계되었습니다. 우리의 초기계획은 향후 4년간 주인없는 땅의 재분배를 시행하는 것입니다."
 land_reform_2:0 "지속적 토지개혁"
-land_reform_2_desc:0 "The expanded version will give the landlords state bonds in addition to the purchase price as compensation. This will be a great step towards ending the rural poverty that has plagued our nation for generations."
+land_reform_2_desc:0 "토지개혁법을 강화해서, 농민에게 땅을 임대해주는 자에게 보상으로 구매금액과 더불어 국채도 발행 할 것입니다. 이는 우리나라를 몇 세대간 괴롭혀온 빈농의 퇴치에 위대한 첫 걸음이 될 것입니다. "
 land_reform_3:0 "광범한 토지개혁"
-land_reform_3_desc:0 "The largest version give expanded powers for government officials to fight those who resit these reforms."
+land_reform_3_desc:0 "토지개혁법의 최종장으로, 지사에게 토지개혁법에 반대하는 사람들을 처리할 수 있는 권한을 부여합니다."
 land_adjustment:0 "토지정리법"
-land_adjustment_desc:0 "The Land Adjustment Act will establish a legal basis for tenant rights. The Act will prohibit landlords from cancelling or refusing to renew a contract unilaterally without due cause."
+land_adjustment_desc:0 "토지정리법은 임차인의 권리에 대한 법적인 근거를 마련합니다. 이 법은 임대인이 정당한 사유나 근거없이 임대를 해지하는 것을 금지하고 있습니다."
 rent_control:0 "소작통제법"
-rent_control_desc:0 "The Rent Control Act will allow local authorities to implement rent controls and authorise prefecture governors to intervene in cases where the rent has been proven to be unreasonably high."
+rent_control_desc:0 "소작통제법은 지자체가 지대(지료)를 통제할 수 있도록 허용합니다. 지사가 판단하기에 임대료가 부당하게 높다고 판단되는 경우, 지사가 개입 할 수 있습니다."
 agriculture_land_control:0 "농지통제법"
-agriculture_land_control_desc:0 "The Agricultural Land Control Act stipulates that conversion or trade of farmland for non-agricultural purposes must be approved by local authorities. This allows us to select what crops are planted, which secures a high production of staple foods."
+agriculture_land_control_desc:0 "농지통제법은 비농업의 목적으로 기존 농지를 전환하거나 혹은 거래를 하려면 지자체의 허가를 필요케 합니다. 이로써 우리는 식량작물을 선택하여 식량 생산량을 높일 수 있습니다. "
 finish_land_reform:0 "토지개혁을 종료한다"
 finish_land_reform_desc:0 "토지개혁을 종료하고 그 결과를 확인합니다..."
 
